Adding services endpoints